--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
+    "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
